--- a/template/.dogitrc.json
+++ b/template/.dogitrc.json
@@ -10,6 +10,12 @@
             "prefix": "xjzmy-prod-v"
         }
     },
+    "systemConfig": {
+        "lang": "en",
+        "test": {
+            "test": "test"
+        }
+    },
     "beforeTag": [],
     "afterTag": []
 }
