--- a/.dogitrc.json
+++ b/.dogitrc.json
@@ -1,1 +1,15 @@
-{"envs":{"dev":{"prefix":"xjzmy-dev-v"},"test":{"prefix":"xjzmy-test-v"},"prod":{"prefix":"xjzmy-prod-v"}},"systemConfig":{"lang":"ZH","test":{"test":"test"}},"beforeTag":[],"afterTag":[]}
+{
+    "envs" : {
+        "dev": {
+            "prefix": "xjzmy-dev-v"
+        },
+        "test": {
+            "prefix": "xjzmy-test-v"
+        },
+        "prod": {
+            "prefix": "xjzmy-prod-v"
+        }
+    },
+    "beforeTag": [],
+    "afterTag": []
+}
